# -

./: .gitignore.txt  Water_properties.txt
DropletEvaporation(IDA)/: DanilErshov.vcxproj  DanilErshov.vcxproj.filters  DropletEvaporation(IDA).cpp  DropletEvaporation(IDA).sln  Source1.cpp  consts.cpp  consts.h  znd.cpp  znd.h
DropletEvaporation(IDA)/IDA/BUILDDIR/POSIX_TIMER_TEST/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  ltest.sln  ltest.vcxproj  ltest.vcxproj.filters
DropletEvaporation(IDA)/IDA/BUILDDIR/POSIX_TIMER_TEST/ltest.dir/Debug/ltest.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
DropletEvaporation(IDA)/IDA/BUILDDIR/POSIX_TIMER_TEST/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
DropletEvaporation(IDA)/IDA/BUILDDIR/POSIX_TIMER_TEST/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
DropletWarming/: DropletWarming.cpp  DropletWarming.sln  DropletWarming.vcxproj  DropletWarming.vcxproj.filters
GeometricProgression/: GeometricProgression.cpp  GeometricProgression.sln  GeometricProgression.vcxproj  GeometricProgression.vcxproj.filters
NewtonLambdaConst/: NewtonLambdaConst.cpp  NewtonLambdaConst.sln  NewtonLambdaConst.vcxproj  NewtonLambdaConst.vcxproj.filters
UnevenGrid/: UnevenGrid.cpp  UnevenGrid.sln  UnevenGrid.vcxproj  UnevenGrid.vcxproj.filters
VariableGrid/: Frames_nevyaz.lay  VariableGrid.cpp  VariableGrid.sln  (+2 more)
(+2246 files in other folders)
