CMAKE_MINIMUM_REQUIRED(VERSION 3.26.4)
PROJECT(ltest C)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_BUILD_TYPE "")
SET(CMAKE_C_COMPILER "C:/Program Files/Microsoft Visual Studio/2022/Community/VC/Tools/MSVC/14.34.31933/bin/Hostx64/x64/cl.exe")
SET(CMAKE_C_STANDARD 99)
SET(CMAKE_C_EXTENSIONS ON)
SET(CMAKE_C_FLAGS "/DWIN32 /D_WINDOWS /W3")
SET(CMAKE_C_FLAGS_RELEASE "/MD /O2 /Ob2 /DNDEBUG")
SET(CMAKE_C_FLAGS_DEBUG "/MDd /Zi /Ob0 /Od /RTC1")
SET(CMAKE_C_FLAGS_RELWITHDEBUGINFO "")
SET(CMAKE_C_FLAGS_MINSIZE "")
ADD_EXECUTABLE(ltest ltest.c)
TARGET_COMPILE_DEFINITIONS(ltest PRIVATE "_POSIX_C_SOURCE=199309L")
TARGET_LINK_LIBRARIES(ltest "")
